--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -8,7 +8,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime
       - {{ ssl_cert_dir }}/:/etc/ssl/certs/
-      - {{ app_dir }}/config/:/home/step/
+      - {{ config_dir }}/:/home/step/
     networks:
       - {{ docker_network }}
     deploy:
