open up permissions

--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -3,7 +3,7 @@
 version: '3.8'
 services: 
 
-  agent:
+  server:
     image: smallstep/step-ca:0.15.4
     volumes:
       - /etc/localtime:/etc/localtime
