--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -16,7 +16,7 @@ services:
         - traefik.enable=true
         - traefik.http.services.{{ git_repository }}.loadbalancer.server.scheme=https
         - traefik.http.services.{{ git_repository }}.loadbalancer.server.port=443
-        - traefik.http.routers.{{ git_repository }}.rule=Host(`{{ domain }}`)
+        - traefik.http.routers.{{ git_repository }}.rule=HostSNI(`{{ domain }}`)
         - traefik.http.routers.{{ git_repository }}.tls.passthrough=true
 networks:
   {{ docker_network }}:
