--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -14,10 +14,11 @@ services:
     deploy:
       labels:
         - traefik.enable=true
-        - traefik.http.services.{{ git_repository }}.loadbalancer.server.scheme=https
+        #- traefik.http.services.{{ git_repository }}.loadbalancer.server.scheme=https
         - traefik.http.services.{{ git_repository }}.loadbalancer.server.port=443
-        - traefik.http.routers.{{ git_repository }}.rule=HostSNI(`{{ domain }}`)
+        - traefik.http.routers.{{ git_repository }}.rule=Host(`{{ domain }}`)
         - traefik.http.routers.{{ git_repository }}.tls.passthrough=true
+        - traefik.http.routers.{{ git_repository }}.services={{ git_repository}}@docker
 networks:
   {{ docker_network }}:
     external:
