--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -14,14 +14,14 @@ services:
     deploy:
       labels:
         - traefik.enable=true
-        
+       
+        - traefik.http.services.{{ git_repository }}.loadbalancer.server.port=443
+        - traefik.http.services.{{ git_repository }}.loadbalancer.server.scheme=https
+
         - traefik.tcp.routers.{{ git_repository }}.rule=HostSNI(`{{ domain }}`)
         - traefik.tcp.routers.{{ git_repository }}.tls.passthrough=true
 
-        - traefik.http.services.{{ git_repository }}.loadbalancer.server.scheme=https
-        - traefik.http.services.{{ git_repository }}.loadbalancer.server.port=443
-
-        - traefik.tcp.routers.{{ git_repository }}.service={{ git_repository }}@docker
+        #- traefik.tcp.routers.{{ git_repository }}.service={{ git_repository }}@docker
 networks:
   {{ docker_network }}:
     external:
