--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -15,8 +15,8 @@ services:
       labels:
         - traefik.enable=true
        
-        - traefik.http.services.{{ git_repository }}.loadbalancer.server.port=443
-        - traefik.http.services.{{ git_repository }}.loadbalancer.server.scheme=https
+        - traefik.tcp.services.{{ git_repository }}.loadbalancer.server.port=443
+        #- traefik.tcp.services.{{ git_repository }}.loadbalancer.server.scheme=https
 
         - traefik.tcp.routers.{{ git_repository }}.rule=HostSNI(`{{ domain }}`)
         - traefik.tcp.routers.{{ git_repository }}.tls.passthrough=true
