--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -17,6 +17,8 @@ services:
         - traefik.tcp.services.{{ git_repository }}.loadbalancer.server.port=443
         - traefik.tcp.routers.{{ git_repository }}.rule=HostSNI(`{{ domain }}`)
         - traefik.tcp.routers.{{ git_repository }}.tls.passthrough=true
+    command: >
+      step ca init
 networks:
   {{ docker_network }}:
     external:
