--- a/.ansible/templates/ca.json.j2
+++ b/.ansible/templates/ca.json.j2
@@ -4,6 +4,7 @@
     "crt": "/home/step/certs/intermediate_ca.crt",
     "key": "/home/step/secrets/intermediate_ca_key",
     "address": ":443",
+    "insecureAddress": "",
     "dnsNames": [
         "{{ domain }}"
     ],
@@ -47,7 +48,7 @@
             "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256"
         ],
         "minVersion": 1.2,
-        "maxVersion": 1.2,
+        "maxVersion": 1.3,
         "renegotiation": false
     }
 }
