enable more verbose debug output

--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -11,6 +11,8 @@ services:
       - {{ config_dir }}/:/home/step/
     networks:
       - {{ docker_network }}
+    environment:
+      STEPDEBUG=1 # enables more verbose debug output
     deploy:
       labels:
         - traefik.enable=true
