debug. override default ca-url for healthcheck

--- a/.ansible/templates/defaults.json.j2
+++ b/.ansible/templates/defaults.json.j2
@@ -1,5 +1,5 @@
 {
-   "ca-url": "https://{{ domain }}",
+   "ca-url": "https://localhost",
    "ca-config": "/home/step/config/ca.json",
    "fingerprint": "{{ fingerprint }}",
    "root": "/home/step/certs/root_ca.crt"
