try adding more aliases

--- a/.ansible/templates/ca.json.j2
+++ b/.ansible/templates/ca.json.j2
@@ -6,7 +6,9 @@
     "address": ":443",
     "insecureAddress": "",
     "dnsNames": [
-        "{{ domain }}"
+        "{{ domain }}",
+        "localhost",
+        "127.0.0.1"
     ],
     "logger": {
         "format": "text"
