--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -13,7 +13,7 @@ services:
       - {{ docker_network }}
     dns:
       - 192.168.50.1
-    dns_searchA:
+    dns_search:
       - ldap.diesel.net
     #environment:
       #- STEPDEBUG=1 # enables more verbose debug output
